# lambda-workshop

./: .gitignore  Dockerfile  README.md  lambda_function.py  pyproject.toml
modules/: finance.py  sheet.py
